grammaire/NaVisu4DCommandsParser.js
// Generated from NaVisu4DCommands.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import NaVisu4DCommandsListener from './NaVisu4DCommandsListener.js';
import NaVisu4DCommandsVisitor from './NaVisu4DCommandsVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class NaVisu4DCommandsParser extends antlr4.Parser {

    static grammarFileName = "NaVisu4DCommands.g4";
    static literalNames = [ null, "'#'", "','" ];
    static symbolicNames = [ null, "HASH", "COMMA", "COMMENT", "BBOX", "MOVE", 
                             "FLYTO", "CAMERA", "DAYNIGHT", "CHART", "TERRAIN", 
                             "LAYER", "IMAGE3D", "IMAGE", "VIDEO3D", "VIDEO", 
                             "BILLBOARD", "BILLBOARDCB", "FIREWORKS", "TEXT", 
                             "AUDIO", "SPEECH", "WEBCAM", "SIMULATION", 
                             "NAVIGATION", "SEABED", "QUIZ", "CLEARALL", 
                             "CLEAR", "VECTOR", "RASTER", "MBTILES", "GOOGLE3D", 
                             "BATHYMETRY", "ALTIMETRY", "OCEANOGRAPHY", 
                             "LITTO3D", "SONAR", "TIDES", "CURRENTS", "TIDAL_ATLAS", 
                             "FORECAST", "PILOTCHART", "NAC", "AVURNAV", 
                             "GPX", "JSON", "NMEA", "TRUE", "FALSE", "FLOAT", 
                             "INT", "QUOTED_STRING", "WORD", "WS", "NEWLINE" ];
    static ruleNames = [ "commandLine", "command", "commandBody", "commentCmd", 
                         "bboxCmd", "moveCmd", "daynightCmd", "chartCmd", 
                         "chartType", "chartLayer", "terrainCmd", "bathymetryCmd", 
                         "altymetryCmd", "oceanographyCmd", "oceanType", 
                         "currentsDetail", "imageCmd", "image3DCmd", "videoCmd", 
                         "video3DCmd", "billboardCmd", "billboardCBCmd", 
                         "fireworksCmd", "textCmd", "audioCmd", "speechCmd", 
                         "webcamCmd", "simulationCmd", "simParam", "navigationCmd", 
                         "navType", "seabedCmd", "quizCmd", "clearCmd", 
                         "clearAllCmd", "num", "boolVal", "freeText", "urlVal" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = NaVisu4DCommandsParser.ruleNames;
        this.literalNames = NaVisu4DCommandsParser.literalNames;
        this.symbolicNames = NaVisu4DCommandsParser.symbolicNames;
    }



	commandLine() {
	    let localctx = new CommandLineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, NaVisu4DCommandsParser.RULE_commandLine);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 79; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 78;
	            this.command();
	            this.state = 81; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===1);
	        this.state = 83;
	        this.match(NaVisu4DCommandsParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, NaVisu4DCommandsParser.RULE_command);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        this.match(NaVisu4DCommandsParser.HASH);
	        this.state = 86;
	        this.commandBody();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	commandBody() {
	    let localctx = new CommandBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, NaVisu4DCommandsParser.RULE_commandBody);
	    try {
	        this.state = 114;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 34:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 88;
	            this.altymetryCmd();
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 89;
	            this.audioCmd();
	            break;
	        case 33:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 90;
	            this.bathymetryCmd();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 91;
	            this.bboxCmd();
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 92;
	            this.billboardCBCmd();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 93;
	            this.billboardCmd();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 94;
	            this.chartCmd();
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 95;
	            this.clearAllCmd();
	            break;
	        case 28:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 96;
	            this.clearCmd();
	            break;
	        case 3:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 97;
	            this.commentCmd();
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 98;
	            this.daynightCmd();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 99;
	            this.fireworksCmd();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 13);
	            this.state = 100;
	            this.image3DCmd();
	            break;
	        case 13:
	            this.enterOuterAlt(localctx, 14);
	            this.state = 101;
	            this.imageCmd();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 15);
	            this.state = 102;
	            this.moveCmd();
	            break;
	        case 24:
	            this.enterOuterAlt(localctx, 16);
	            this.state = 103;
	            this.navigationCmd();
	            break;
	        case 35:
	            this.enterOuterAlt(localctx, 17);
	            this.state = 104;
	            this.oceanographyCmd();
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 18);
	            this.state = 105;
	            this.quizCmd();
	            break;
	        case 25:
	            this.enterOuterAlt(localctx, 19);
	            this.state = 106;
	            this.seabedCmd();
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 20);
	            this.state = 107;
	            this.simulationCmd();
	            break;
	        case 21:
	            this.enterOuterAlt(localctx, 21);
	            this.state = 108;
	            this.speechCmd();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 22);
	            this.state = 109;
	            this.terrainCmd();
	            break;
	        case 19:
	            this.enterOuterAlt(localctx, 23);
	            this.state = 110;
	            this.textCmd();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 24);
	            this.state = 111;
	            this.video3DCmd();
	            break;
	        case 15:
	            this.enterOuterAlt(localctx, 25);
	            this.state = 112;
	            this.videoCmd();
	            break;
	        case 22:
	            this.enterOuterAlt(localctx, 26);
	            this.state = 113;
	            this.webcamCmd();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	commentCmd() {
	    let localctx = new CommentCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, NaVisu4DCommandsParser.RULE_commentCmd);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.match(NaVisu4DCommandsParser.COMMENT);
	        this.state = 117;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 118;
	        this.freeText();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bboxCmd() {
	    let localctx = new BboxCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, NaVisu4DCommandsParser.RULE_bboxCmd);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.match(NaVisu4DCommandsParser.BBOX);
	        this.state = 121;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 122;
	        this.num();
	        this.state = 123;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 124;
	        this.num();
	        this.state = 125;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 126;
	        this.num();
	        this.state = 127;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 128;
	        this.num();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moveCmd() {
	    let localctx = new MoveCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, NaVisu4DCommandsParser.RULE_moveCmd);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.match(NaVisu4DCommandsParser.MOVE);
	        this.state = 131;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 132;
	        this.match(NaVisu4DCommandsParser.FLYTO);
	        this.state = 133;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 134;
	        this.match(NaVisu4DCommandsParser.CAMERA);
	        this.state = 135;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 136;
	        this.num();
	        this.state = 137;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 138;
	        this.num();
	        this.state = 139;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 140;
	        this.num();
	        this.state = 148;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 141;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 142;
	            this.num();
	            this.state = 143;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 144;
	            this.num();
	            this.state = 145;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 146;
	            this.num();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	daynightCmd() {
	    let localctx = new DaynightCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, NaVisu4DCommandsParser.RULE_daynightCmd);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 150;
	        this.match(NaVisu4DCommandsParser.DAYNIGHT);
	        this.state = 151;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 152;
	        this.boolVal();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	chartCmd() {
	    let localctx = new ChartCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, NaVisu4DCommandsParser.RULE_chartCmd);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 154;
	        this.match(NaVisu4DCommandsParser.CHART);
	        this.state = 155;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 156;
	        this.chartType();
	        this.state = 157;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 158;
	        this.chartLayer();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	chartType() {
	    let localctx = new ChartTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, NaVisu4DCommandsParser.RULE_chartType);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 160;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 3758096384) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	chartLayer() {
	    let localctx = new ChartLayerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, NaVisu4DCommandsParser.RULE_chartLayer);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 162;
	        _la = this._input.LA(1);
	        if(!(_la===51 || _la===53)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	terrainCmd() {
	    let localctx = new TerrainCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, NaVisu4DCommandsParser.RULE_terrainCmd);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 164;
	        this.match(NaVisu4DCommandsParser.TERRAIN);
	        this.state = 165;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 166;
	        this.match(NaVisu4DCommandsParser.GOOGLE3D);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bathymetryCmd() {
	    let localctx = new BathymetryCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, NaVisu4DCommandsParser.RULE_bathymetryCmd);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.match(NaVisu4DCommandsParser.BATHYMETRY);
	        this.state = 169;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 170;
	        this.match(NaVisu4DCommandsParser.WORD);
	        this.state = 173;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 171;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 172;
	            this.match(NaVisu4DCommandsParser.SONAR);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	altymetryCmd() {
	    let localctx = new AltymetryCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, NaVisu4DCommandsParser.RULE_altymetryCmd);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.match(NaVisu4DCommandsParser.ALTIMETRY);
	        this.state = 176;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 177;
	        this.match(NaVisu4DCommandsParser.LITTO3D);
	        this.state = 178;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 179;
	        this.match(NaVisu4DCommandsParser.WORD);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	oceanographyCmd() {
	    let localctx = new OceanographyCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, NaVisu4DCommandsParser.RULE_oceanographyCmd);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.match(NaVisu4DCommandsParser.OCEANOGRAPHY);
	        this.state = 182;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 183;
	        this.oceanType();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	oceanType() {
	    let localctx = new OceanTypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, NaVisu4DCommandsParser.RULE_oceanType);
	    try {
	        this.state = 191;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 38:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 185;
	            this.match(NaVisu4DCommandsParser.TIDES);
	            this.state = 186;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 187;
	            this.match(NaVisu4DCommandsParser.WORD);
	            break;
	        case 39:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 188;
	            this.match(NaVisu4DCommandsParser.CURRENTS);
	            this.state = 189;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 190;
	            this.currentsDetail();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	currentsDetail() {
	    let localctx = new CurrentsDetailContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, NaVisu4DCommandsParser.RULE_currentsDetail);
	    var _la = 0;
	    try {
	        this.state = 205;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 40:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 193;
	            this.match(NaVisu4DCommandsParser.TIDAL_ATLAS);
	            this.state = 194;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 195;
	            this.match(NaVisu4DCommandsParser.WORD);
	            this.state = 196;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 197;
	            this.match(NaVisu4DCommandsParser.WORD);
	            this.state = 200;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===2) {
	                this.state = 198;
	                this.match(NaVisu4DCommandsParser.COMMA);
	                this.state = 199;
	                this.match(NaVisu4DCommandsParser.WORD);
	            }

	            break;
	        case 41:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 202;
	            this.match(NaVisu4DCommandsParser.FORECAST);
	            this.state = 203;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 204;
	            this.match(NaVisu4DCommandsParser.WORD);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	imageCmd() {
	    let localctx = new ImageCmdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, NaVisu4DCommandsParser.RULE_imageCmd);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 207;
	        this.match(NaVisu4DCommandsParser.IMAGE);
	        this.state = 208;
	        this.match(NaVisu4DCommandsParser.COMMA);
	        this.state = 209;
	        this.match(NaVisu4DCommandsParser.WORD);
	        this.state = 212;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        if(la_===1) {
	            this.state = 210;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 211;
	            this.freeText();

	        }
	        this.state = 219;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 214;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 215;
	            this.num();
	            this.state = 216;
	            this.match(NaVisu4DCommandsParser.COMMA);
	            this.state = 217;
	            this.num();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


